--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>卡说 · 前端公共</title>
+
     <link rel="stylesheet" href="./dist/app.css">
+    <link rel="stylesheet" type="text/css" href="http://cdn.fed.dev.kashuo.net/ks/assets/fonts/index.css">
   </head>
   <body>
     <aside id="app" style="height: 100%;">
